{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 36,
  "lineage": "c9693e5f-a8a1-84e0-35dd-0775d00a2576",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "walter-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:internet-gateway/igw-03262e2a5600ec086",
            "id": "igw-03262e2a5600ec086",
            "owner_id": "862686223907",
            "tags": {
              "Name": "walter-ig"
            },
            "tags_all": {
              "Name": "walter-ig"
            },
            "vpc_id": "vpc-07d5292af97d0e64b"
          },
          "dependencies": [
            "aws_vpc.walter-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "walter-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:route-table/rtb-0e8a911df49102fed",
            "id": "rtb-0e8a911df49102fed",
            "owner_id": "862686223907",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03262e2a5600ec086",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07d5292af97d0e64b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.walter-ig",
            "aws_vpc.walter-application-deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "walter-application-deployment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:vpc/vpc-07d5292af97d0e64b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-0a205dd5204b6da22",
            "default_route_table_id": "rtb-08fc6c5aaaf738052",
            "default_security_group_id": "sg-01fcc9b29c47a759d",
            "dhcp_options_id": "dopt-01dfbf2c7f0ecee82",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d5292af97d0e64b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08fc6c5aaaf738052",
            "owner_id": "862686223907",
            "tags": {
              "Name": "walter-application-deployment-vpc"
            },
            "tags_all": {
              "Name": "walter-application-deployment-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d303287a96a6816c",
            "arn": "arn:aws:ec2:us-west-1:862686223907:instance/i-07f4350c7d8aa9cf2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f4350c7d8aa9cf2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "walterwojnarowski-awskey2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03105614b12e2dd7c",
            "private_dns": "ip-10-4-0-35.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.4.0.35",
            "public_ip": "54.67.12.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b9e523eff0fac726",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e14549be68cfc9ab",
            "tags": {
              "Name": "walter-app"
            },
            "tags_all": {
              "Name": "walter-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e1dc9356abd4f4d"
            ]
          },
          "dependencies": [
            "module.application-tier.aws_security_group.walter-sg-group",
            "module.application-tier.aws_subnet.walter-app-subnet",
            "module.db-tier.aws_instance.db",
            "module.db-tier.aws_security_group.walter-sg-db-group",
            "module.db-tier.aws_subnet.walter-db-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "walter-app-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0840b00e4bac64f01",
            "route_table_id": "rtb-0e8a911df49102fed",
            "subnet_id": "subnet-0e14549be68cfc9ab"
          },
          "dependencies": [
            "aws_internet_gateway.walter-ig",
            "aws_route_table.walter-rt",
            "aws_vpc.walter-application-deployment",
            "module.application-tier.aws_subnet.walter-app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "walter-sg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:security-group/sg-06e1dc9356abd4f4d",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e1dc9356abd4f4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.4.0.35/32"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "10.4.1.24/32"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "18.117.8.240/32",
                  "92.8.160.94/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "walter-app-sg",
            "name_prefix": "",
            "owner_id": "862686223907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "walter-app-sg"
            },
            "tags_all": {
              "Name": "walter-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d5292af97d0e64b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.walter-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2286689394",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06e1dc9356abd4f4d",
            "security_group_rule_id": "sgr-094e3ca58f3175cdb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.walter-application-deployment",
            "module.application-tier.aws_security_group.walter-sg-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "18.117.8.240/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1554493789",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06e1dc9356abd4f4d",
            "security_group_rule_id": "sgr-06ca98ccc43f65434",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.walter-application-deployment",
            "module.application-tier.aws_security_group.walter-sg-group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "92.8.160.94/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2363059969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06e1dc9356abd4f4d",
            "security_group_rule_id": "sgr-0e4058a6f24157e01",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.walter-application-deployment",
            "module.application-tier.aws_security_group.walter-sg-group"
          ]
        }
      ]
    },
    {
      "module": "module.application-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "walter-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:subnet/subnet-0e14549be68cfc9ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.4.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e14549be68cfc9ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862686223907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "walter-app"
            },
            "tags_all": {
              "Name": "walter-app"
            },
            "vpc_id": "vpc-07d5292af97d0e64b"
          },
          "dependencies": [
            "aws_vpc.walter-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d17099f9a1843ab6",
            "arn": "arn:aws:ec2:us-west-1:862686223907:instance/i-01465b8118e437792",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01465b8118e437792",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0573bcd5bea32c720",
            "private_dns": "ip-10-4-1-24.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.4.1.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2fddbeca3c16112",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011e752b34fa27dad",
            "tags": {
              "Name": "walter-database"
            },
            "tags_all": {
              "Name": "walter-database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037c1a3cff7a5bd05"
            ]
          },
          "dependencies": [
            "module.db-tier.aws_security_group.walter-sg-db-group",
            "module.db-tier.aws_subnet.walter-db-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "walter-db-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f54591652469ab02",
            "route_table_id": "rtb-08fc6c5aaaf738052",
            "subnet_id": "subnet-011e752b34fa27dad"
          },
          "dependencies": [
            "aws_vpc.walter-application-deployment",
            "module.db-tier.aws_subnet.walter-db-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "walter-sg-db-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:security-group/sg-037c1a3cff7a5bd05",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037c1a3cff7a5bd05",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.4.0.0/24"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "10.4.0.35/32"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "walter-database-db-sg",
            "name_prefix": "",
            "owner_id": "862686223907",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "walter-database-sg"
            },
            "tags_all": {
              "Name": "walter-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d5292af97d0e64b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.walter-application-deployment"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.4.0.0/24"
            ],
            "description": "",
            "from_port": 27017,
            "id": "sgrule-745770156",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-037c1a3cff7a5bd05",
            "security_group_rule_id": "sgr-0a119ddb44844b8e7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.walter-application-deployment",
            "module.db-tier.aws_security_group.walter-sg-db-group"
          ]
        }
      ]
    },
    {
      "module": "module.db-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "walter-db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:862686223907:subnet/subnet-011e752b34fa27dad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.4.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011e752b34fa27dad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862686223907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "walter-database-db-subnet"
            },
            "tags_all": {
              "Name": "walter-database-db-subnet"
            },
            "vpc_id": "vpc-07d5292af97d0e64b"
          },
          "dependencies": [
            "aws_vpc.walter-application-deployment"
          ]
        }
      ]
    }
  ]
}